RESOLVED FIXED117163
[WK2] REGRESSION(r150798): scrolling coordinator is not being enabled when WebPage is set to use fixed layout
https://bugs.webkit.org/show_bug.cgi?id=117163
Summary [WK2] REGRESSION(r150798): scrolling coordinator is not being enabled when We...
Marcelo Lira
Reported 2013-06-03 12:56:09 PDT
Since WebPageProxy can be created and methods called when no underlying WebPage exists yet, a call to WebPageProxy::setUseFixedLayout(...) will only be delivered to WebProcess by the IPC mechanism after the WebPage is created. But it is WebPage constructor that creates a DrawingArea, that calls enterAcceleratedCompositingMode(), that creates a CoordinatedLayerTreeHost, that calls WebKit::WebPage::settings()->setScrollingCoordinatorEnabled(true), if fixed layout is true. The call to WebPage::setUseFixedLayout() comes too late, and the scrolling coordinated is never enabled.
Attachments
Patch (2.69 KB, patch)
2013-06-03 13:15 PDT, Marcelo Lira
no flags
Marcelo Lira
Comment 1 2013-06-03 13:15:43 PDT
Noam Rosenthal
Comment 2 2013-06-03 14:28:29 PDT
Comment on attachment 203622 [details] Patch LGTM, please ask for owner review
WebKit Commit Bot
Comment 3 2013-06-03 15:06:38 PDT
Comment on attachment 203622 [details] Patch Clearing flags on attachment: 203622 Committed r151132: <http://trac.webkit.org/changeset/151132>
WebKit Commit Bot
Comment 4 2013-06-03 15:06:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.