[WK2] REGRESSION(r150798): scrolling coordinator is not being enabled when WebPage is set to use fixed layout https://bugs.webkit.org/show_bug.cgi?id=117163

Reviewed by Darin Adler.

Moved call to WebPage::settings()->setScrollingCoordinatorEnabled()
from CoordinatedLayerTreeHost constructor to WebPage::setUseFixedLayout().
The scrolling coordinator must be enabled or disabled following the
WebPage's use of fixed layout.

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:
(WebKit::CoordinatedLayerTreeHost::CoordinatedLayerTreeHost):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::setUseFixedLayout):


Canonical link: https://commits.webkit.org/135424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151132 268f45cc-cd09-0410-ab3c-d52691b4dbfc