Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -1329,6 +1329,7 @@ void WebPage::setUseFixedLayout(bool fixed)
     m_page->settings()->setAcceleratedCompositingForFixedPositionEnabled(fixed);
     m_page->settings()->setFixedPositionCreatesStackingContext(fixed);
     m_page->settings()->setApplyPageScaleFactorInCompositor(fixed);
+    m_page->settings()->setScrollingCoordinatorEnabled(fixed);
 #endif
 
 #if USE(TILED_BACKING_STORE) && ENABLE(SMOOTH_SCROLLING)
